Refactor a bit and add partial unit tests
Signed-off-by: Songkan Tang <songkant@amazon.com>